# travel-buddy

./: .gitignore  README.md  memory_store.json  pyproject.toml  requirements.txt  test_routing.py  test_simple_routing.py
examples/: __init__.py  conversation_example.py  custom_handler_example.py  logging_example.py
tests/: __init__.py  run_tests.py  test_routing.py  test_routing_basic.py  test_routing_simple.py
travel_buddy/: cli.py  general_types.py  logger.py  settings.py
travel_buddy/chains/: basic_chain.py
travel_buddy/graphs/: basic_graph.py  conditional_graph.py  smart_graph.py  task_router.py
travel_buddy/handlers/: __init__.py  api_handlers.py  base_handler.py  registry.py  task_classifier.py
travel_buddy/handlers/taskHandlers/: attractions_handler.py  destination_handler.py  other_handler.py  packing_handler.py  summary_handler.py
travel_buddy/memory/: __init__.py  conversation_manager.py  memory_store.py  types.py
travel_buddy/models/: hf_loader.py  llm_loader.py  ollama_loader.py  response_models.py
