[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "travel-buddy"
version = "0.1.0"
description = "Travel Buddy: local HuggingFace LLM with LangChain and LangGraph"
authors = [{name = "Your Name"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "transformers>=4.43.0",
  "accelerate>=0.33.0",
  "torch>=2.3.0",
  "safetensors>=0.4.3",
  "pydantic>=2.7.0",
  "python-dotenv>=1.0.1",
  "langchain>=0.2.10",
  "langgraph>=0.0.72",
  "huggingface_hub>=0.24.0",
]

[project.scripts]
travel-buddy = "travel_buddy.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}
